<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_viagens" />
        <item
            android:id="@+id/nav_photos"
            android:title="@string/nav_ajuda" />
        <item
            android:id="@+id/nav_movies"
            android:title="@string/nav_configuracoes" />

    </group>

    <item android:title="Outros">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>
</menu>